--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>pterodactyl-auto-starter-bungee</artifactId>
+    <name>PterodactylAutoStarter-BungeeCord</name>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
