chore: update GitHub Actions workflows to use specific action versions and improve version bumping process

--- a/.github/workflows/bump-major-version.yml
+++ b/.github/workflows/bump-major-version.yml
@@ -1,5 +1,8 @@
 name: Bump Major Maven version (manual trigger)
 
+permissions:
+  contents: write
+
 on:
   workflow_dispatch:
 
@@ -8,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out source code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v5.0.0
 
       - name: Set up Java
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v5.0.0
         with:
           java-version: '17'
           distribution: "temurin"
@@ -20,7 +23,7 @@ jobs:
       - name: Bump major version
         run: |
           # 1) Récupération de la version Maven actuelle
-          CURRENT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          CURRENT_VERSION=$(mvn -q help:evaluate -Dexpression=project.version -DforceStdout)
 
           echo "Version actuelle : $CURRENT_VERSION"
 
@@ -40,18 +43,22 @@ jobs:
           NEW_VERSION="$NEW_MAJOR.$NEW_MINOR.$NEW_PATCH-SNAPSHOT"
 
           echo "Nouvelle version (Major bump) : $NEW_VERSION"
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
-          # 5) Mise à jour du pom.xml
-          mvn versions:set -DnewVersion="$NEW_VERSION" -DgenerateBackupPoms=false
+          # 5) Mise à jour du pom.xml pour tous les modules + références parent/enfants
+          mvn -B \
+            versions:set -DnewVersion="$NEW_VERSION" -DgenerateBackupPoms=false -DprocessAllModules \
+            versions:update-child-modules -DgenerateBackupPoms=false
 
       - name: Commit changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add pom.xml
-          git commit -m "chore: bump major version to $NEW_VERSION" || echo "Aucun changement à commiter."
+          # Ajouter tous les fichiers modifiés (dont les pom.xml)
+          git add -A
+          git commit -m "chore: bump major version to ${NEW_VERSION}" || echo "Aucun changement à commiter."
 
       - name: Push changes
         run: |
-          git push origin HEAD
+          git push origin "HEAD:${GITHUB_REF_NAME}"
