--- a/pterodactyl-auto-starter-common/pom.xml
+++ b/pterodactyl-auto-starter-common/pom.xml
@@ -11,20 +11,13 @@
 
     <artifactId>pterodactyl-auto-starter-common</artifactId>
     <name>PterodactylAutoStarter-Common</name>
-
-    <repositories>
-        <repository>
-            <id>mattmalec-repo</id>
-            <url>https://repo.mattmalec.com/repository/releases</url>
-        </repository>
-    </repositories>
+    <description>Common module providing shared API and utilities for Pterodactyl Auto Starter</description>
 
     <dependencies>
         <!-- Adventure API -->
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-api</artifactId>
-            <version>4.25.0</version>
             <scope>compile</scope>
         </dependency>
 
@@ -32,7 +25,6 @@
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-text-serializer-ansi</artifactId>
-            <version>4.25.0</version>
             <scope>compile</scope>
         </dependency>
 
@@ -40,7 +32,6 @@
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>ansi</artifactId>
-            <version>1.1.1</version>
             <scope>compile</scope>
         </dependency>
 
@@ -48,23 +39,13 @@
         <dependency>
             <groupId>com.mattmalec</groupId>
             <artifactId>Pterodactyl4J</artifactId>
-            <version>2.BETA_142</version>
             <scope>compile</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/net.md-5/bungeecord-config -->
-        <dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-config</artifactId>
-            <version>1.21-R0.4</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
