--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -1,51 +1,46 @@
 name: Release Build
 
+permissions:
+  contents: write   # pour uploader l’artefact sur la release
+
 on:
   release:
-    types: [created]
+    types: [ created ]
 
 jobs:
   build-jar:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
-        uses: actions/checkout@v5
+        uses: actions/checkout@v5.0.0
 
       - name: Set up JDK
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@v5.0.0
         with:
           java-version: '17'
           distribution: "temurin"
           cache: maven
 
-      # Étape pour enlever "-SNAPSHOT" dans le pom.xml
-      - name: Remove -SNAPSHOT from pom.xml
-        run: mvn versions:set -DremoveSnapshot -DgenerateBackupPoms=false
+      # Cache Maven packages
+      - name: Cache Maven packages
+        uses: actions/cache@v4.3.0
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
-      # Construction Maven
+      # Étape pour enlever "-SNAPSHOT" dans le pom.xml (multi-module)
+      - name: Remove -SNAPSHOT from pom.xml (all modules)
+        run: mvn versions:set -DremoveSnapshot -DgenerateBackupPoms=false -DprocessAllModules
+
+      # Construction Maven avec optimisations
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn -T1C package -DskipTests -Dmaven.test.skip=true -Dmaven.javadoc.skip=true
 
-      # On récupère le vrai nom des jars Bungee et Velocity
-      - name: Find Bungee built jar name
-        id: find_bungee_jar
-        shell: bash
-        run: echo "bungee_jar=$(basename $(ls bungee/target/pterodactyl-auto-starter-bungee-*.jar))" >> $GITHUB_OUTPUT
-
-      - name: Find Velocity built jar name
-        id: find_velocity_jar
-        shell: bash
-        run: echo "velocity_jar=$(basename $(ls velocity/target/pterodactyl-auto-starter-velocity-*.jar))" >> $GITHUB_OUTPUT
-
-      # Upload des jars sur la release GitHub
-      - name: Upload Bungee JAR to release
-        uses: csexton/release-asset-action@v3
+      # Upload des JARs sur la release GitHub
+      - name: Upload JARs to release
+        uses: softprops/action-gh-release@v2.4.1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          file: bungee/target/${{ steps.find_bungee_jar.outputs.bungee_jar }}
-
-      - name: Upload Velocity JAR to release
-        uses: csexton/release-asset-action@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          file: velocity/target/${{ steps.find_velocity_jar.outputs.velocity_jar }}
+          files: |
+            pterodactyl-auto-starter-bungee/target/pterodactyl-auto-starter-bungee-*.jar
+            pterodactyl-auto-starter-velocity/target/pterodactyl-auto-starter-velocity-*.jar
