feat: ajouter des dépendances BungeeCord et mettre à jour les composants Adventure

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <!-- Dependency versions -->
         <adventure.version>4.25.0</adventure.version>
         <kyori.ansi.version>1.1.1</kyori.ansi.version>
+        <bungeecord.version>1.21-R0.4</bungeecord.version>
+        <adventure.platform.version>4.4.1</adventure.platform.version>
         <pterodactyl4j.version>2.BETA_142</pterodactyl4j.version>
         <waterfall.version>1.21-R0.1-SNAPSHOT</waterfall.version>
         <velocity.version>3.3.0-SNAPSHOT</velocity.version>
@@ -84,11 +86,27 @@
                 <scope>compile</scope>
             </dependency>
 
+            <!-- Adventure Platform BungeeCord -->
+            <dependency>
+                <groupId>net.kyori</groupId>
+                <artifactId>adventure-platform-bungeecord</artifactId>
+                <version>${adventure.platform.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
             <!-- ANSI -->
             <dependency>
                 <groupId>net.kyori</groupId>
                 <artifactId>ansi</artifactId>
                 <version>${kyori.ansi.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <!-- BungeeCord Config -->
+            <dependency>
+                <groupId>net.md-5</groupId>
+                <artifactId>bungeecord-config</artifactId>
+                <version>${bungeecord.version}</version>
                 <scope>compile</scope>
             </dependency>
 
