refactor: améliorer la gestion des vérifications d'état du serveur et des téléportations avec des délais configurables

--- a/pterodactyl-auto-starter-common/src/main/resources/config.yml
+++ b/pterodactyl-auto-starter-common/src/main/resources/config.yml
@@ -1,8 +1,25 @@
 pterodactyl:
   url: https://pterodactyl.exemple.com
   token: abc
+
+# Configuration du système de file d'attente et démarrage des serveurs
+server-start:
+  # Fréquence de vérification de l'état du serveur en secondes (temps normal)
+  check-interval-normal: 15
+  
+  # Fréquence de vérification de l'état du serveur en secondes (pendant le démarrage)
+  check-interval-startup: 3
+  
+  # Temps d'attente en secondes avant de commencer à TP les joueurs après que le serveur soit ONLINE
+  # Cela laisse le temps au serveur de bien se lancer avant de recevoir des joueurs
+  wait-before-teleport: 5
+  
+  # Délai entre chaque téléportation de joueur (en secondes) pour éviter les overloads
+  teleport-delay: 1
+
 queue:
   server: lobby
+
 servers:
   lobby:
     id: abc
