--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <waterfall.version>1.21-R0.1-SNAPSHOT</waterfall.version>
         <velocity.version>3.3.0-SNAPSHOT</velocity.version>
         <junit.version>4.13.2</junit.version>
+        <mockito.version>5.7.0</mockito.version>
     </properties>
 
     <repositories>
@@ -146,6 +147,14 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- Mockito for mocking -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
