--- a/pterodactyl-auto-starter-common/pom.xml
+++ b/pterodactyl-auto-starter-common/pom.xml
@@ -55,6 +55,13 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Mockito for mocking -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
